--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.png" alt="" />
+							<img src="banner.png" alt="" />
 						</div>
 					</section>
 
@@ -48,7 +48,7 @@ Obtendo essa informação, o site pode aplicar um recurso de um mapa local para 
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/marrom.jpg" alt="" />
+							<img src="marrom.jpg" alt="" />
 						</div>
 					</section>
 
