--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="imagens/banner.png" alt="" />
+							<img src="images/banner.png" alt="" />
 						</div>
 					</section>
 
