--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 							<h1>Cemitec</h1>
 							<p class="major">Um grupo de alunos da Etec Rosa Perrone Scavone.</p>
 							<ul class="actions stacked">
-								<li><a href="" class="button">Learn More</a></li>
+								<li><a href="https://github.com/AnaLuSG/ProjetoTCC/tree/main/diario_de_bordo" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
