--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>O projeto é construido como um software web de mapeamento de cemitério e Banco de dados, um site voltado para a secretaria do cemitério e facilitação do fluxo de visitantes e atividade dos funcionários.
-							Haverá um Banco de Dados contendo todos os registros de óbito armazenados pela secretaria, e registros de mapa do local.  </h2>
+							<p>O projeto é construido como um software web de mapeamento de cemitério e Banco de dados, um site voltado para a secretaria do cemitério e facilitação do fluxo de visitantes e atividade dos funcionários.
+							Haverá um Banco de Dados contendo todos os registros de óbito armazenados pela secretaria, e registros de mapa do local.  </p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -41,8 +41,8 @@
 			
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Com dados completos de óbito, o funcionário da secretaria irá inserir o nome completo do falecido, e o sistema aplica a "filtragem" desses dados, para assim obter o registro de tal ente específico. 
-Obtendo essa informação, o site pode aplicar um recurso de um mapa local para orientar o visistante para qual lápide/tumulo está o ente-queriso que ele procura, sinalizando com um icone. 							</h2>
+							<p>Com dados completos de óbito, o funcionário da secretaria irá inserir o nome completo do falecido, e o sistema aplica a "filtragem" desses dados, para assim obter o registro de tal ente específico. 
+Obtendo essa informação, o site pode aplicar um recurso de um mapa local para orientar o visistante para qual lápide/tumulo está o ente-queriso que ele procura, sinalizando com um icone.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
