--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<p>Com dados completos de óbito, o funcionário da secretaria irá inserir o nome completo do falecido, e o sistema aplica a "filtragem" desses dados, para assim obter o registro de tal ente específico. 
-Obtendo essa informação, o site pode aplicar um recurso de um mapa local para orientar o visistante para qual lápide/tumulo está o ente-queriso que ele procura, sinalizando com um icone.</p>
+Obtendo essa informação, o site pode aplicar um recurso de um mapa local para orientar o visistante para qual lápide/tumulo está o ente-querido que ele procura, sinalizando com um icone.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
